# Punktop

./: .gitignore  CMakeLists.txt  Makefile  README.md  api.c  api.cpp  api.h  aspire.sh  cbuild.sh  colors.txt  imgui.ini  main.cpp  punktop.h  shell.nix  system.cpp  system.h  system.json
imgui/: implot.cpp  implot_items.cpp
include/SDL2/: SDL_revision.h
prototypes/: disk.c
src/: #dockspace.cpp#  cpu.cpp  cpuplot.cpp  disk.cpp  dockspace.cpp  memoryplot.cpp  net.cpp  proc.cpp  statsfornerds.cpp  statsfornerds.h  system.json  systemfetch.cpp
